--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div class="container-fluid">
+            <div class="container-fluid vh-80 py-5 py-md-0 bg-black">
                 <div class="row">
                     <div class="col-12 px-0">
                         <div class="main-visual bg-dark vh-90 text-white">
@@ -28,15 +28,13 @@
                 <div class="row">
                     <div class="col-11 bg-mainRed d-md-flex justify-content-center mx-auto py-4">
                         <h1 class="text-white">About</h1>
-                        <div class="col-md-5 vh-30 p-4">
+                        <div class="col-md-5 vh-40 p-4">
                             <div class="selfphoto position-absolute">
-                                <img class="vh-20" src="https://placehold.jp/130x100.png" alt="">
+                                <img class="vh-30" src="img/myself.jpg" alt="">
                             </div>
-                            <div class="bg-selfphoto position-absolute">
-                                <img class="vh-15" src="https://placehold.jp/180x100.png" alt="">
-                            </div>
+                            <div class="bg-selfphoto position-absolute"></div>
                         </div>
-                        <div class="col-md-5 vh-30">
+                        <div class="col-md-5 vh-30 py-4 text-black">
                             <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -51,7 +49,7 @@
                 <h1 class="text-white">Skills</h1>
                 <div class="row">
                     <div class="col-11 px-0 mx-auto d-md-flex pt-4 my-4 text-white">
-                        <div class="col-12 col-md-3 vh-50 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle bg-black mx-auto"></div>
                             <div class="skill-content my-3">
                                 <p class="skills-title text-center">Web Coding</p>
@@ -61,7 +59,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-50 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle bg-black mx-auto"></div>
                             <div class="skill-content my-3">
                                 <p class="skills-title text-center">Web Coding</p>
@@ -71,7 +69,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-50 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle bg-black mx-auto"></div>
                             <div class="skill-content my-3">
                                 <p class="skills-title text-center">Web Coding</p>
@@ -81,7 +79,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-50 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle bg-black mx-auto"></div>
                             <div class="skill-content my-3">
                                 <p class="skills-title text-center">Web Coding</p>
@@ -97,13 +95,13 @@
         </section>
         <section id="products">
             <div class="container-fluid bg-mainGray py-5">
-                <h1 class="text-white">Production</h1>
                 <div class="row">
                     <div class="col-11 bg-mainRed px-0 d-md-flex mx-auto">
+                        <h1 class="text-white">Production</h1>
                         <h5>Love and Beer</h5>
-                        <div class="col-md-6 vh-30">
+                        <div class="col-md-6 vh-40">
                             <div class="products-img position-absolute">
-                                <img class="vh-30" src="https://placehold.jp/130x100.png" alt="">
+                                <img class="vh-40 vw-80" src="img/beer.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-6 vh-30 pt-3">
@@ -117,9 +115,9 @@
                 <div class="row">
                     <div class="col-11 bg-mainRed px-0 d-md-flex mx-auto">
                         <h5>Idea Box</h5>
-                        <div class="col-md-6 vh-30">
+                        <div class="col-md-6 vh-50">
                             <div class="products-img position-absolute">
-                                <img class="vh-30" src="https://placehold.jp/130x100.png" alt="">
+                                <img class="vh-50 vw-80" src="img/ideabox.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-6 vh-30 pt-3">
