--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 bg-mainRed d-md-flex justify-content-center mx-auto py-4 py-md-0">
-                        <div class="txt__about col-md-5 py-4 py-md-0 text-black">
+                    <div class="col-11 flexbox bg-mainRed d-md-flex justify-content-center mx-auto py-4 py-md-0">
+                        <div class="txt__about col-md-5 py-4 py-md-0 text-black order2">
                             <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                             </p>
                         </div>
                         <div class="col-md-5 vh-40 text-center">
-                            <div class="selfphoto position-absolute　text-center">
+                            <div class="selfphoto position-absolute　text-center order1">
                                 <img class="selfphoto__img" src="img/myself.jpg" alt="">
                             </div>
                             <div class="bg-selfphoto position-absolute"></div>
@@ -60,7 +60,7 @@
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
                             <div class="skill-content my-3">
-                                <p class="skills-title text-center">Web Coding</p>
+                                <p class="skills-title text-center">Site Coding</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -70,7 +70,7 @@
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
                             <div class="skill-content my-3">
-                                <p class="skills-title text-center">Web Coding</p>
+                                <p class="skills-title text-center">Writing/SEO</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -80,7 +80,7 @@
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
                             <div class="skill-content my-3">
-                                <p class="skills-title text-center">Web Coding</p>
+                                <p class="skills-title text-center">ECsite</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -90,7 +90,7 @@
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
                             <div class="skill-content my-3">
-                                <p class="skills-title text-center">Web Coding</p>
+                                <p class="skills-title text-center">Programing</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -109,15 +109,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 bg-mainRed px-0 py-5 d-md-flex mx-auto">
-                        <div class="col-md-6 vh-80 pt-3">
-                            <h5 class="py-4">Love and Beer</h5>
-                            <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                    <div class="col-11 flexbox bg-mainRed px-0 py-5 d-md-flex mx-auto">
+                        <div class="col-md-6 pd-txt pt-3 order2">
+                            <h5 class="py-4 text-white txt-pdttl">Love and Beer</h5>
+                            <p class="text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                             </p>
                         </div>
-                        <div class="col-md-6 vh-80 text-center">
+                        <div class="col-md-6 text-center order1">
                             <div class="products-img position-absolute　text-center">
                                 <img class="products-img__Loveandbeer" src="img/beer.png" alt="">
                             </div>
@@ -125,15 +125,15 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 bg-mainRed px-0 py-5 d-md-flex mx-auto">
-                        <div class="col-md-6 vh-30 pt-3">
-                            <h5 class="py-4">Idea Box</h5>
-                            <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                    <div class="col-11 flexbox bg-mainRed px-0 py-5 d-md-flex mx-auto">
+                        <div class="col-md-6 pt-3 order2">
+                            <h5 class="py-4 text-white txt-pdttl">Idea Box</h5>
+                            <p class="text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                             </p>
                         </div>
-                        <div class="col-md-6 vh-50 text-center">
+                        <div class="col-md-6 text-center order1">
                             <div class="products-img position-absolute　text-center">
                                 <img class="products-img__ideabox text-center" src="img/ideabox.png" alt="">
                             </div>
