--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </p>
                         </div>
                         <div class="col-md-5 vh-40 text-center">
-                            <div class="selfphoto position-absolute　text-center order1">
+                            <div class="selfphoto position-absolute text-center order1">
                                 <img class="selfphoto__img" src="img/myself.jpg" alt="">
                             </div>
                             <div class="bg-selfphoto position-absolute"></div>
@@ -59,7 +59,7 @@
                     <div class="col-11 px-0 mx-auto d-md-flex pt-4 my-4 text-white">
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
-                            <div class="skill-content my-3">
+                            <div class="skill-content my-4">
                                 <p class="skills-title text-center">Site Coding</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -69,7 +69,7 @@
                         </div>
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
-                            <div class="skill-content my-3">
+                            <div class="skill-content my-4">
                                 <p class="skills-title text-center">Writing/SEO</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -79,7 +79,7 @@
                         </div>
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
-                            <div class="skill-content my-3">
+                            <div class="skill-content my-4">
                                 <p class="skills-title text-center">ECsite</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -89,7 +89,7 @@
                         </div>
                         <div class="col-12 col-md-3 vh-60 py-4">
                             <div class="skill-icon rounded-circle mx-auto"></div>
-                            <div class="skill-content my-3">
+                            <div class="skill-content my-4">
                                 <p class="skills-title text-center">Programing</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                     ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -118,7 +118,7 @@
                             </p>
                         </div>
                         <div class="col-md-6 text-center order1">
-                            <div class="products-img position-absolute　text-center">
+                            <div class="products-img">
                                 <img class="products-img__Loveandbeer" src="img/beer.png" alt="">
                             </div>
                         </div>
@@ -126,16 +126,16 @@
                 </div>
                 <div class="row">
                     <div class="col-11 flexbox bg-mainRed px-0 py-5 d-md-flex mx-auto">
-                        <div class="col-md-6 pt-3 order2">
-                            <h5 class="py-4 text-white txt-pdttl">Idea Box</h5>
+                        <div class="col-md-6 pd-txt pt-3 order2">
+                            <h5 class="py-4 text-white txt-pdttl">Ideabox</h5>
                             <p class="text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                             </p>
                         </div>
                         <div class="col-md-6 text-center order1">
-                            <div class="products-img position-absolute　text-center">
-                                <img class="products-img__ideabox text-center" src="img/ideabox.png" alt="">
+                            <div class="products-img">
+                                <img class="products-img__ideabox" src="img/ideabox.png" alt="">
                             </div>
                         </div>
                     </div>
