--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Page Title</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/7849ae5b05.js" crossorigin="anonymous"></script>
         <link rel='stylesheet' type='text/css' media='screen' href='scss/index.css'>
         <script src='index.js'></script>
     </head>
@@ -58,7 +59,9 @@
                 <div class="row">
                     <div class="col-11 px-0 mx-auto d-md-flex pt-4 my-4 text-white">
                         <div class="col-12 col-md-3 vh-60 py-4">
-                            <div class="skill-icon rounded-circle mx-auto"></div>
+                            <div class="skill-icon rounded-circle mx-auto">
+                                <i class="skill-icon__img fas fa-code"></i>
+                            </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">Site Coding</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -68,7 +71,9 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-3 vh-60 py-4">
-                            <div class="skill-icon rounded-circle mx-auto"></div>
+                            <div class="skill-icon rounded-circle mx-auto">
+                                <i class="skill-icon__img fas fa-pen-fancy"></i>
+                            </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">Writing/SEO</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -78,7 +83,9 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-3 vh-60 py-4">
-                            <div class="skill-icon rounded-circle mx-auto"></div>
+                            <div class="skill-icon rounded-circle mx-auto">
+                                <i class="skill-icon__img fab fa-shopify"></i>
+                            </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">ECsite</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -88,7 +95,9 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-3 vh-60 py-4">
-                            <div class="skill-icon rounded-circle mx-auto"></div>
+                            <div class="skill-icon rounded-circle mx-auto">
+                                <i class="skill-icon__img fas fa-desktop"></i>
+                            </div>
                             <div class="skill-content my-4">
                                 <p class="skills-title text-center">Programing</p>
                                 <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
