--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                             </p>
                         </div>
-                        <div class="col-md-5 vh-40 text-center">
-                            <div class="selfphoto position-absolute text-center order1">
+                        <div class="col-md-5 text-center">
+                            <div class="selfphoto position-relative text-center order1">
                                 <img class="selfphoto__img" src="img/myself.jpg" alt="">
                             </div>
                             <div class="bg-selfphoto position-absolute"></div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="row">
                     <div class="col-11 px-0 mx-auto d-md-flex pt-4 my-4 text-white">
-                        <div class="col-12 col-md-3 vh-60 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-5">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fas fa-code"></i>
                             </div>
@@ -70,7 +70,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-60 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-5">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fas fa-pen-fancy"></i>
                             </div>
@@ -82,7 +82,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-60 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-5">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fab fa-shopify"></i>
                             </div>
@@ -94,7 +94,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-60 py-4">
+                        <div class="col-12 col-md-3 vh-60 py-5">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fas fa-desktop"></i>
                             </div>
