--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src='index.js'></script>
     </head>
     <body>
+        <div id="page_top"><a href="#"></a></div>
         <header class="">
             <div class="container-fluid py-md-0 bg-black">
                 <div class="row">
@@ -18,7 +19,7 @@
                         <div class="main-visual text-white">
                             <img class="vw-100" src="img/cat.jpg">
                             <h1 class="title position-absolute">Portfolio</h1>
-                            <p class="subtitle text-center position-absolute">Created by Shunta</p>
+                            <p class="subtitle text-center position-absolute">Created by Shunta.W</p>
                         </div>
                     </div>
                 </div>
