--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Page Title</title>
+        <title>Portfolio</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/7849ae5b05.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
     <body>
         <div id="page_top"><a href="#"></a></div>
         <header class="">
-            <div class="container-fluid py-md-0 bg-black">
+            <div class="container-fluid py-lg-0 bg-black">
                 <div class="row">
                     <div class="col-12 px-0">
                         <div class="main-visual text-white">
@@ -26,15 +26,15 @@
             </div>
         </header>
         <section id="about" class="bg-mainGray secpdd">
-            <div class="container-fluid bg-mainGray py-5">
+            <div class="container-fluid bg-mainGray">
                 <div class="row">
-                    <div class="col-11 bg-mainRed d-md-flex mx-auto">
+                    <div class="col-11 bg-mainRed d-lg-flex mx-auto">
                         <h2 class="text-white text-secttl pt-5">About</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 flexbox bg-mainRed d-md-flex justify-content-center mx-auto py-4 py-md-0">
-                        <div class="txt__about col-md-5 py-4 py-md-0 text-black order2">
+                    <div class="col-11 flexbox bg-mainRed d-lg-flex justify-content-center mx-auto py-4 py-md-0">
+                        <div class="txt__about col-md-5 py-4 py-lg-0 text-black order2">
                             <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -53,13 +53,13 @@
         <section id="skills" class="bg-mainGray secpdd">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-11 px-0 mx-auto d-md-flex pt-4 my-4 text-white">
+                    <div class="col-11 px-0 mx-auto d-lg-flex pt-4 my-4 text-white">
                         <h1 class="text-white text-secttl">Skills</h1>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 px-0 mx-auto d-md-flex pt-4 my-4 text-white">
-                        <div class="col-12 col-md-3 skills-box vh-60">
+                    <div class="col-11 col-md-6 col-lg-10 px-0 mx-auto d-lg-flex pt-4 my-4 text-white">
+                        <div class="col-12 col-lg-3 skills-box vh-60">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fas fa-code"></i>
                             </div>
@@ -71,7 +71,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-60 skills-box">
+                        <div class="col-12 col-lg-3 vh-60 skills-box">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fas fa-pen-fancy"></i>
                             </div>
@@ -83,7 +83,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-60 skills-box">
+                        <div class="col-12 col-lg-3 vh-60 skills-box">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fab fa-shopify"></i>
                             </div>
@@ -95,7 +95,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-3 vh-60">
+                        <div class="col-12 col-lg-3 vh-60">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fas fa-desktop"></i>
                             </div>
@@ -114,20 +114,21 @@
         <section id="products" class="bg-mainGray secpdd pb-5">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-11 bg-mainRed px-0 py-5 d-md-flex mx-auto">
-                        <h1 class="text-white text-secttl">Production</h1>
+                    <div class="col-11 bg-mainRed px-0 py-5 d-lg-flex mx-auto">
+                        <h2 class="text-white text-secttl">Productions</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 flexbox bg-mainRed px-0 py-5 d-md-flex mx-auto">
-                        <div class="col-md-6 pd-txt pt-3 order2">
+                    <div class="col-11 flexbox bg-mainRed px-0 py-5 d-lg-flex mx-auto">
+                        <div class="col-lg-6 pd-txt pt-3 order2">
                             <h5 class="py-4 text-white txt-pdttl">Love and Beer</h5>
+                            <p class="text-white">使用フレーム : Rails</p>
                             <p class="text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                             </p>
                         </div>
-                        <div class="col-md-6 text-center order1">
+                        <div class="col-lg-6 text-center order1">
                             <div class="products-img">
                                 <img class="products-img__Loveandbeer" src="img/beer.png" alt="">
                             </div>
@@ -135,17 +136,18 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 flexbox bg-mainRed px-0 py-5 d-md-flex mx-auto">
-                        <div class="col-md-6 pd-txt pt-3 order2">
+                    <div class="col-11 flexbox bg-mainRed px-0 py-5 d-lg-flex mx-auto">
+                        <div class="col-lg-6 pd-txt pt-3 order2">
                             <h5 class="py-4 text-white txt-pdttl">Ideabox</h5>
+                            <p class="text-white">使用フレーム : Vue.js (DB：Firebase)</p>
                             <p class="text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                             </p>
                         </div>
-                        <div class="col-md-6 text-center order1">
+                        <div class="col-lg-6 text-center order1">
                             <div class="products-img">
-                                <img class="products-img__ideabox" src="img/ideabox.png" alt="">
+                                <img class="products-img__ideabox" src="img/ideabox2.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -162,5 +164,6 @@
                 </div>
             </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     </body>
 </html>
