--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 flexbox bg-mainRed d-lg-flex justify-content-center mx-auto py-4 py-md-0">
-                        <div class="txt__about col-md-5 py-4 py-lg-0 text-black order2">
+                    <div class="col-11 flexbox bg-mainRed d-lg-flex justify-content-center mx-auto py-md-0">
+                        <div class="txt__about col-md-5 py-lg-0 text-black order2">
                             <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
@@ -44,7 +44,6 @@
                             <div class="selfphoto position-relative text-center order1">
                                 <img class="selfphoto__img" src="img/myself.jpg" alt="">
                             </div>
-                            <div class="bg-selfphoto position-absolute"></div>
                         </div>
                     </div>
                 </div>
