--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/7849ae5b05.js" crossorigin="anonymous"></script>
         <link rel='stylesheet' type='text/css' media='screen' href='scss/index.css'>
-        <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-        <script type="text/javascript" src='./js/index.js'></script>
     </head>
-    <body>
-        <div id="page_top"><a href="#"></a></div>
+    <body class="">
+        <div class="wrap">
+        <div id="page_top"><a href=""></a></div>
         <header class="">
             <div class="container-fluid py-lg-0 bg-black">
                 <div class="row">
@@ -95,7 +94,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-3 vh-60">
+                        <div class="col-12 col-lg-3 vh-60 skills-box">
                             <div class="skill-icon rounded-circle mx-auto">
                                 <i class="skill-icon__img fas fa-desktop"></i>
                             </div>
@@ -164,5 +163,9 @@
                 </div>
             </div>
         </footer>
+    </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+        <script type="text/javascript" src='./js/index.js'></script>
     </body>
 </html>
