--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <body class="">
         <div class="wrap">
         <div id="page_top"><a href=""></a></div>
-        <header class="">
+        <header>
             <div class="container-fluid py-lg-0 bg-black">
                 <div class="row">
                     <div class="col-12 px-0">
                         <div class="main-visual text-white">
-                            <img class="vw-100" src="img/cat.jpg">
-                            <h1 class="title position-absolute">Portfolio</h1>
-                            <p class="subtitle text-center position-absolute">Created by Shunta.W</p>
+                            <video src="./movie/Lines - 12918.mp4" type="video/mp4" autoplay loop muted>
+                            </video>
+                            <h2 class="title position-absolute">Portfolio</h2>
+                            <h3 class="subtitle position-absolute">Created by Shunta.W</h3>
                         </div>
                     </div>
                 </div>
@@ -34,7 +35,7 @@
                 </div>
                 <div class="row">
                     <div class="col-11 flexbox bg-mainRed d-lg-flex justify-content-center mx-auto py-md-0">
-                        <div class="txt__about col-md-5 mx-auto py-lg-0 text-black order2">
+                        <div class="txt__about col-md-5 mx-auto py-lg-0 text-white order2">
                             <p>ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
                                 ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
