--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="row">
                     <div class="col-12 px-0">
                         <div class="main-visual text-white">
-                            <video src="./movie/Lines - 12918.mp4" type="video/mp4" playsinline autoplay loop muted>
+                            <video src="./movie/Lines - 12918.mp4" type="video/mp4" autoplay muted playsinline loop>
                             </video>
                             <h2 class="title position-absolute">Portfolio</h2>
                             <h3 class="subtitle position-absolute">Created by Shunta.W</h3>
