--- a/index.html
+++ b/index.html
@@ -152,6 +152,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-11 flexbox bg-mainRed px-0 py-5 d-lg-flex mx-auto">
+                        <div class="col-lg-6 pd-txt pt-3 order2">
+                            <h5 class="py-4 text-white txt-pdttl">RPG GAME</h5>
+                            <p class="text-white">使用言語 : C#</p>
+                            <p class="txt-pd text-white">ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                                ここにはテキストが入ります。ここにはテキストが入ります。ここにはテキストが入ります。
+                            </p>
+                        </div>
+                        <div class="col-lg-6 text-center order1">
+                            <div class="products-img">
+                                <img class="products-img__rpg" src="img/rpg.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="contact"></section>
@@ -159,14 +176,15 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 mx-0 bg-black py-2">
+                        <p class="text-left pl-3"><a class="text-white" href="contact.html">Contact</a></p>
                         <p class="text-white text-center">©️Shunta Watabe 2020</p>
                     </div>
                 </div>
             </div>
         </footer>
     </div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-        <script type="text/javascript" src='./js/index.js'></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script type="text/javascript" src='./js/index.js'></script>
     </body>
 </html>
